# sleep-harness

./: .gitignore  LICENSE  PLAN_FASE3_SEGURIDAD.md  PLAN_VALIDACION.md  PREREG_FASE3.md  PREREG_MULTICICLO.md  README.md  pyproject.toml
bundles/: rem_exp2_c2.json  rem_facts_mini_seed0.json  rem_facts_mini_seed1.json  rem_facts_v2_seed0.json
experiments/: exp0_lens_drift.py  exp1_prepare_dreams.py  exp2_coevolution.py  exp4_security_firewall.py  exp5_memory_firewall.py
notebooks/: colab_exp0_lens_refit.ipynb  colab_exp1_dream_filter.ipynb  colab_exp3_workspace_distill.ipynb
resultados/colab/: exp1_aux.json  exp1_debil.json  exp1f_final.json  exp3_final_full.json  exp3_partial.json  exp3_run1.json  gemelos_veneno.json  gemelos_veneno_scored.json  gemma4_gemelos.json  gemma4_olvido.json  gemma4_smoke.json  multiciclo_partial.json  multiciclo_veredicto.txt  veredictos.json
resultados/exp0/: lens_drift.json
resultados/exp2/: parche_analista_c2_iter2.md  parche_analista_c4.md  pedido_analista_c2.md  pedido_analista_c4.md  resumen_20260717_172933.json  resumen_20260717_173931.json  resumen_20260717_175704.json  (+7 more)
scripts/: analisis_final.py  colab_orchestrate.sh  gen_notebooks.py  package_for_colab.sh  run_multiciclo_loop.sh  run_noche.sh  run_v2.sh  run_v2_lex.sh  run_v6.sh
sleepharness/: __init__.py  _compat.py  config.py  security.py  signatures_ext.py
sleepharness.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
tasks/: facts_mini.json  facts_v2.json  security_prompts.json  sondas_olvido.json  trojan_train.json
tests/: test_core.py
(+46 files in other folders)
